--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -23,7 +23,13 @@
 \input{head/titlepage.tex}
 \include{head/dedication}
 \setcounter{page}{0}
+
+
+%
+% to be included later
 \include{head/acknowledgements}
+%
+%
 %\include{head/preface}
 \include{head/abstracts}
 
