--- a/head/dedication.tex
+++ b/head/dedication.tex
@@ -12,7 +12,7 @@
 %\end{raggedleft}
 
 \begin{raggedleft}
-	Besides this'll be easy with the two of us. \\ We've got science on our side. \\
+	Besides, this'll be easy with the two of us. \\ We've got science on our side. \\
     %Science rules! Here's some proof. \\ (Looking at the crowd in disbelief) \\
 	--- Bonnibel Bubblegum\\
 \end{raggedleft}
