--- a/main/chap2_kernels.tex
+++ b/main/chap2_kernels.tex
@@ -313,7 +313,7 @@ With all assumptions in place, we can formulate the variational problem $\mathds
 %\label{eq.infdimprob}
 %		\text{F}(x) = \sup_{f \, \in \mathcal{H}} \, \{ f(x) : \rknorm{f} \leq \Gamma, \infnorm{f_X - \mathsf{y}} \leq \bar \delta \} 
 %\end{equation}
-where $f_X$ is the vector of evaluations at the input locations, which are repeated whenever multiple outputs are available at a given input (see Appendix~\ref{sec.auxiliary_definitions}). We highlight that the supremum is guaranteed to be a finite number. To see this, notice that $|f(x)| = |\rkinner{f}{k(x,\cdot)}| \leq \rknorm{f} \rknorm{k(x,\cdot)} \leq \Gamma \, \sqrt{k(x,x)}$. This last bound is rather loose as it does not exploit any information present in $X$ nor the outputs $\mathsf{y}$, and is moreover uniform for translation-invariant kernels such as the squared-exponential. \eqref{eq.infdimprob} on the other hand makes use the dataset $\{(x_i,\mathsf{y}_i)\}_{i=1}^d$ in its entirety as well as the complexity bound $\Gamma$.
+where $f_X$ is the vector of evaluations at the input locations, which are repeated whenever multiple outputs are available at a given input (see Appendix~\ref{sec.auxiliary_definitions}). We highlight that the supremum is guaranteed to be finite. To see this, notice that $|f(x)| = |\rkinner{f}{k(x,\cdot)}| \leq \rknorm{f} \rknorm{k(x,\cdot)} \leq \Gamma \, \sqrt{k(x,x)}$. This last bound is rather loose as it does not exploit any information present in $X$ nor the outputs $\mathsf{y}$, and is moreover uniform for translation-invariant kernels such as the squared-exponential. \eqref{eq.infdimprob} on the other hand makes use the dataset $\{(x_i,\mathsf{y}_i)\}_{i=1}^d$ in its entirety as well as the complexity bound $\Gamma$.
 
 % thanks to \eqref{eq.uniformBound}. Given a query location $x$, $\mathds{P}0$ yields the tightest
 %\footnote{\textcolor{red}{This adjective has to be understood in the sense that for any other possible candidate bound $\epsilon$ such that $\epsilon<F(x)$, there exists an $\tilde{f}$ compatible with our assumptions that violates this bound. This means, $\Vert \tilde{f} \Vert_\mathcal{H} \leq \Gamma$, $\Vert \tilde{f}_X-\mathsf{y} \Vert_\infty\leq \bar{\delta}$, and $\tilde{f}(x)>\epsilon$.}} 
@@ -585,7 +585,7 @@ Finally, recall that \eqref{eq.relaxedObjective} was a (conservative) upper boun
 The proof of Proposition~\ref{prop:closed_form_bounds} presented in Section~\ref{sec.selected_derivations} follows a different, simpler argumentation. The derivation presented here however better highlights how the relaxed maximizaition \eqref{eq.relaxedObjective} takes into account the worst-possible inner-product $\delta_2^\top K_{XX}^{-1}K_{Xx}$ and norm term associated with $\delta_1$ jointly. Besides, Proposition~\ref{prop:closed_form_bounds} is also seen to strongly rely on the interpolant $\tilde s(x)$ as shown by the use of the triangle-inequality.  Despite this fact, we have experimentally achieved reasonable results when in moderate noise level scenarios.
 
 \begin{remark}
-	The sub-optimal bounds given in Proposition~\ref{prop:closed_form_bounds} feature a nominal model at their center, which is desirable in certain situations. In the optimal case, the minimum norm regressor $s^\star(x) = \alpha^{\star\top} K_{Xx}$, $\alpha^\star = \text{arg}\min_{\alpha \in \mathbb{R}^d} \{ \alpha^\top K_{XX} \alpha : \infnorm{K_{XX} \alpha - y} \leq \bar\delta \}$ can be used as a nominal model. This choice is guaranteed to lie completely within $\text{C}(x)$ and $\text{B}(x)$, although not necessarily in the middle, since the map $s^\star$ belongs to $\mathcal{H}$ and is a feasible solution for $\mathds{P}0$ in \eqref{eq.infdimprob}.
+	The sub-optimal bounds given in Proposition~\ref{prop:closed_form_bounds} feature a nominal model at their center, which is desirable in some situations. In the optimal case, the minimum norm regressor $s^\star(x) = \alpha^{\star\top} K_{Xx}$, $\alpha^\star = \text{arg}\min_{\alpha \in \mathbb{R}^d} \{ \alpha^\top K_{XX} \alpha : \infnorm{K_{XX} \alpha - y} \leq \bar\delta \}$ can be used as a nominal model. This choice is guaranteed to lie completely within $\text{C}(x)$ and $\text{B}(x)$, although not necessarily in the middle, since the map $s^\star$ belongs to $\mathcal{H}$ and is a feasible solution for $\mathds{P}0$ in \eqref{eq.infdimprob}.
 \end{remark}
 
 \section{Kernel predictive control}
@@ -645,7 +645,7 @@ Besides having nominal predictions, robust \textit{confidence sets} are used to 
 %	{\includegraphics[width=0.78\textwidth]{pics/maps2}}
 %\end{figure}
 
-The diagram shown in Figure~\ref{fig.kpc_sets} illustrates the nominal predictions $F_i$ and confidence sets $\mathbb{X}_i$ all spawning from the initial state $x_0$. Notice how as defined above, $F_i$ and $\mathbb{X}_i$ are independent elements and need not to satisfy $F_i \in \mathbb{X}_i$, let alone being exactly in the geometric center of it as depicted in Figure~\ref{fig.kpc_sets}. Nevertheless, both these properties can be obtained if the nominal model and bounds given in Proposition~\ref{prop:closed_form_bounds} are employed. Also, the confidence sets are illustrated as hyper-rectangles to reflect the fact that uncertainty quantification is carried out individually in each dimension of the state-space.
+The diagram shown in Figure~\ref{fig.kpc_sets} illustrates the nominal predictions $F_i$ and confidence sets $\mathbb{X}_i$ all spawning from the initial state $x_0$. Notice how as defined above, $F_i$ and $\mathbb{X}_i$ are independent elements and need not satisfy $F_i \in \mathbb{X}_i$, let alone being exactly in the geometric center of it as depicted in Figure~\ref{fig.kpc_sets}. Nevertheless, both these properties can be obtained if the nominal model and bounds given in Proposition~\ref{prop:closed_form_bounds} are employed. Also, the confidence sets are illustrated as hyper-rectangles to reflect the fact that uncertainty quantification is carried out individually in each dimension of the state-space.
 
 For the sake of training the multi-step ahead models and confidence sets, a particular set of data has to be gathered. For $F_1$ and $\mathbb{X}_1$, one needs $\{(x_t,u_t),y_t\}_{t=1}^d$, $y_t = f(x_t,u_t) + \delta_t$, where $|\delta_t| \leq \bar\delta$ and where disconnected one-step sequences can be put together. For $F_2$ and $\mathbb{X}_2$, one needs $\{(x_t,u_t,u_{t+1}),y_t\}_{t=1}^d$, $y_t = f(f(x_t,u_t),u_{t+1}) + \delta_t$. Following the same logic, for a general pair $F_N$ and $\mathbb{X}_N$, one needs tuples of states $x_t$ and $N-1$ control moves $u_t,\dots,u_{N-1}$ and the $N$th step ahead state $x_{t+N}$ possibly corrupted by noise. 
 
