--- a/main/chap3_gaussian_processes.tex
+++ b/main/chap3_gaussian_processes.tex
@@ -6,9 +6,9 @@
 
 Buildings are responsible for a large share of the global CO$_2$ emissions, more concretely, for around 37\% of them when taking into account the estimated emissions associated with producing their materials \citep[§3.2]{united2022}. Having in place energy-efficient heating and cooling systems is often highlighted as a key requirement for significantly lowering their environmental impact and marching towards a greener future \citep{iea2022}. This in turn could either be achieved by structurally changing the built environment, for instance, improving thermal isolation between indoor spaces and the outdoor space, or by making a more intelligent use of the energy at hand, guaranteeing the occupants' comfort while minimizing metrics such as thermal wasting. Control engineers are specialists in carrying out the latter task.
 
-Besides its clear economical and political pertinence, the topic of raising the efficiency of buildings has also had a significant academic relevance, particularly for the automatic control community. One idea that is often explored is that well tuned, specialized control algorithms can deliver better performance compared to simplistic strategies commonly deployed in the field \citep{stluka2018architectures}. These specialized algorithms often rely on solving optimization problems on-line, and can exploit forecasts of important quantities such as the weather and the building occupancy schedule \citep{oldewurtel2012use}. Arguably the most common framework used by researchers to tackle building climate control is model predictive control thanks to its flexibility and interpretability. The reader is referred to \cite{drgovna2020all} for quite a comprehensive survey on the matter. In \cite{sturzenegger2015model} for instance, the authors report in detail the results of using MPC to operate an occupied 6-story Swiss office building over multiple months. Moreover, the study concluded that the energy savings were not sufficient to justify the engineering effort required to deploy MPC in everyday building projects. In fact, the modeling stage is frequently pointed out by many studies as being the most burdensome one, preventing the wider adoption of this technique in the field \citep{drgovna2020all,bunning2020experimental}.
+Besides its clear economical and political pertinence, the topic of raising the efficiency of buildings has also had a significant academic relevance, particularly for the automatic control community. One idea that is often explored is that well tuned, specialized control algorithms could deliver better performance compared to simplistic strategies commonly deployed in the field \citep{stluka2018architectures}. These specialized algorithms often rely on solving optimization problems on-line, and can exploit forecasts of important quantities such as the weather and the building occupancy schedule \citep{oldewurtel2012use}. Arguably the most common framework used by researchers to tackle building climate control is model predictive control thanks to its flexibility and interpretability. The reader is referred to \cite{drgovna2020all} for quite a comprehensive survey on the matter. In \cite{sturzenegger2015model} for instance, the authors report in detail the results of using MPC to operate an occupied 6-story Swiss office building over multiple months. Moreover, the study concluded that the energy savings were not sufficient to justify the engineering effort required to deploy MPC in everyday building projects. In fact, the modeling stage is frequently pointed out by many studies as being the most burdensome one, preventing the wider adoption of this technique in the field \citep{drgovna2020all,bunning2020experimental}.
 
-Eliciting knowledge from domain experts or using architectural data to develop linear thermal models for buildings was proven to be an effective approach in many distinct scenarios (see e.g. the experimental works \cite{vavna2014model,bunning2022physics}). As an alternative, it is also possible to employ black-box linear structures, which requires less access to building-specific information \citep{fabietti2016experimental,fabietti2018multi}. A more recent trend is that of experimenting with contemporary machine learning models and methods, whose promise is to further ease the modeling step while being flexible enough to capture intricate non-linear relationships present in the data and deliver superior performance. Some variants of reinforcement learning (RL) for instance are model-free and can optimize their actions over time by only interacting with the environment \citep{du2021intelligent}. Nevertheless, since RL typically converges slowly and long-lasting experiments with low performance on occupied real buildings are not desirable, model-free RL designers make use of simulation environments to warm-start their RL agents, thus not escaping the need of high-fidelity models \citep{di2022lessons}. Going from historical data directly to on-line decision making is possible through data-enabled predictive control (DeePC)  \citep{coulson2019data}, which bypasses the modeling step completely and directly incorporates sensor information into a special MPC formulation. This paradigm was used in \cite{lian2021adaptive} to regulate the indoor temperature of a university lecture hall over several weeks. DeePC was however developed to handle linear relationships and more flexible tools are necessary to model more complex dynamics, e.g. the formalism of Gaussian processes (GPs).
+Eliciting knowledge from domain experts or using architectural data to develop linear thermal models for buildings was proven to be an effective approach in many distinct scenarios (see e.g. the experimental works \cite{vavna2014model,bunning2022physics}). As an alternative, it is also possible to employ black-box linear structures, which require less access to building-specific information \citep{fabietti2016experimental,fabietti2018multi}. A more recent trend is that of experimenting with contemporary machine learning models and methods, whose promise is to further ease the modeling step while being flexible enough to capture intricate non-linear relationships present in the data and deliver superior performance. Some variants of reinforcement learning (RL) for instance are model-free and can optimize their actions over time by only interacting with the environment \citep{du2021intelligent}. Nevertheless, since RL typically converges slowly and long-lasting experiments with low performance on occupied real buildings are not desirable, model-free RL designers make use of simulation environments to warm-start their RL agents, thus not escaping the need of high-fidelity models \citep{di2022lessons}. Going from historical data directly to on-line decision making is possible through data-enabled predictive control (DeePC)  \citep{coulson2019data}, which bypasses the modeling step completely and directly incorporates sensor information into a special MPC formulation. This paradigm was used in \cite{lian2021adaptive} to regulate the indoor temperature of a university lecture hall over several weeks. DeePC was however developed to handle linear relationships and more flexible tools are necessary to model more complex dynamics, e.g. the formalism of Gaussian processes (GPs).
 
 Gaussian processes are a well-established, principled way of crafting possibly non-linear statistical models. In contrast with the techniques listed in the previous paragraph, GPs yield not only nominal predictions, but also a measure of confidence around them that can be taken into account during decision making. Practical applications of this tool can be easily found in the area of robotics, computer simulation, global optimization, among others. In the building community, they have been used to calibrate digital twins \citep{chakrabarty2021scalable}, forecast temperature evolution \citep{gray2016thermal}, detect faults in air-handling units \citep{van2017advanced}, and create abstract models for how consumers react to demand-adjustment signals \citep{nghiem2017data}. All of the previously cited works consisted of off-line analyses on real data or purely of simulations and, to the best of our knowledge, the use of Gaussian processes to carry out closed-loop control of a building has not yet been reported in the literature. The experimental investigation presented in this chapter aims at filling that gap.
 
@@ -298,7 +298,7 @@ The results are presented in Figure~\ref{fig.runTimes}, where the vertical scale
 
 \section{Experimental results}
 
-The previously described Gaussian process-based MPC formulation was deployed on the local computer and used to operate the surgery center cooling system during multiple days in the months of October and November 2021. We report in Figure~\ref{fig.prettyCool} a four-day uninterrupted experiment carried out from November 10 to November 13 that is rather representative of the local internal and external conditions. We highlight that the curves displayed in the figure were not filtered in any way; the sole manipulation performed with the data was the imputation of the missing temperature entries using linear interpolation. These points, however, accounted for only 43 out of the 1728 indoor temperature values gathered during the four-day experiment. The first and third top plots show the room temperatures and the immediate uncertainty associated with the GP predictions $T_\text{unc} = \beta \text{var}^{1/2}$ as employed in the formulation \eqref{eq.constr2}. The second plot displays the valve positions, that is, the control variables. Both outdoor signals, the external temperature and the solar radiation are also given. The reader is reminded that, although the latter contributes with additional heat gains, it is completely unknown to the controller as explained in Section~\ref{sec.ModelTrainingAndTesting}. Lastly, the bottom plot shows the supply water temperature $T_\text{sup}$, an external disturbance that was incorporated in the GP models. This signal evolves according to the chiller own dynamics, over which we had no direct control.
+The previously described Gaussian process-based MPC formulation was deployed on the local computer and used to operate the surgery center cooling system during multiple days in the months of October and November 2021. We report in Figure~\ref{fig.prettyCool} a four-day uninterrupted experiment carried out from November 10 to November 13 that is rather representative of the local internal and external conditions. We highlight that the curves displayed in the figure were not filtered in any way; the sole manipulation performed with the data was the imputation of the missing temperature entries using linear interpolation. These points, however, accounted for only 43 out of the 1'728 indoor temperature values gathered during the four-day experiment. The first and third top plots show the room temperatures and the immediate uncertainty associated with the GP predictions $T_\text{unc} = \beta \text{var}^{1/2}$ as employed in the formulation \eqref{eq.constr2}. The second plot displays the valve positions, that is, the control variables. Both outdoor signals, the external temperature and the solar radiation are also given. The reader is reminded that, although the latter contributes with additional heat gains, it is completely unknown to the controller as explained in Section~\ref{sec.ModelTrainingAndTesting}. Lastly, the bottom plot shows the supply water temperature $T_\text{sup}$, an external disturbance that was incorporated in the GP models. This signal evolves according to the chiller own dynamics, over which we had no direct control.
 
 \afterpage{
 \begin{landscape}
