--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -34,12 +34,15 @@
 	publisher={Elsevier}
 }
 
-@article{di2022lessons,
-	title={Lessons Learned from Data-Driven Building Control Experiments: Contrasting Gaussian Process-based MPC, Bilevel DeePC, and Deep Reinforcement Learning},
+@inproceedings{di2022lessons,
+	title={Lessons Learned from Data-Driven Building Control Experiments: Contrasting {Gaussian} Process-based {MPC}, Bilevel {DeePC}, and Deep Reinforcement Learning},
 	author={Di Natale, Loris and Lian, Yingzhao and Maddalena, Emilio T and Shi, Jicheng and Jones, Colin N},
-	journal={arXiv preprint arXiv:2205.15703},
-	year={2022}
+	booktitle={Conference on Decision and Control (CDC)},
+	pages={1111--1117},
+	year={2022},
+	organization={IEEE}
 }
+
 
 @article{lian2021adaptive,
 	title={Adaptive robust data-driven building control via bi-level reformulation: an experimental result},
@@ -51,7 +54,7 @@
 @inproceedings{coulson2019data,
 	title={Data-enabled predictive control: In the shallows of the DeePC},
 	author={Coulson, Jeremy and Lygeros, John and D{\"o}rfler, Florian},
-	booktitle={2019 18th European Control Conference (ECC)},
+	booktitle={European Control Conference (ECC)},
 	pages={307--312},
 	year={2019},
 	organization={IEEE}
@@ -480,7 +483,7 @@
 
 @book{searcoid2002elements,
 	title={Elements of abstract analysis},
-	author={Searc{\'o}id, M{\'\i}che{\'a}l {\'O} and Searcoid, MO},
+	author={Searc{\'o}id, M{\'\i}che{\'a}l {\'O}},
 	year={2002},
 	publisher={Springer}
 }
@@ -584,7 +587,7 @@
 }
 
 @article{burt2020convergence,
-	title={Convergence of Sparse Variational Inference in Gaussian Processes Regression},
+	title={Convergence of Sparse Variational Inference in {Gaussian} Processes Regression},
 	author={Burt, David R and Rasmussen, Carl Edward and van der Wilk, Mark},
 	journal={Journal of Machine Learning Research},
 	volume={21},
@@ -731,14 +734,14 @@
 }
 
 @book{gramacy2020surrogates,
-	title={Surrogates: Gaussian process modeling, design, and optimization for the applied sciences},
+	title={Surrogates: {Gaussian} process modeling, design, and optimization for the applied sciences},
 	author={Gramacy, Robert B},
 	year={2020},
 	publisher={Chapman and Hall/CRC}
 }
 
 @article{bauer2016understanding,
-	title={Understanding probabilistic sparse Gaussian process approximations},
+	title={Understanding probabilistic sparse {Gaussian} process approximations},
 	author={Bauer, Matthias and van der Wilk, Mark and Rasmussen, Carl Edward},
 	journal={Advances in neural information processing systems},
 	volume={29},
@@ -746,7 +749,7 @@
 }
 
 @inproceedings{snelson2007local,
-	title={Local and global sparse Gaussian process approximations},
+	title={Local and global sparse {Gaussian} process approximations},
 	author={Snelson, Edward and Ghahramani, Zoubin},
 	booktitle={Artificial Intelligence and Statistics},
 	pages={524--531},
@@ -755,7 +758,7 @@
 }
 
 @article{quinonero2005unifying,
-	title={A unifying view of sparse approximate Gaussian process regression},
+	title={A unifying view of sparse approximate {Gaussian} process regression},
 	author={Quinonero-Candela, Joaquin and Rasmussen, Carl Edward},
 	journal={The Journal of Machine Learning Research},
 	volume={6},
@@ -765,7 +768,7 @@
 }
 
 @article{csato2002sparse,
-	title={Sparse on-line Gaussian processes},
+	title={Sparse on-line {Gaussian} processes},
 	author={Csat{\'o}, Lehel and Opper, Manfred},
 	journal={Neural computation},
 	volume={14},
@@ -785,7 +788,7 @@
 
 
 @article{bui2017unifying,
-	title={A unifying framework for Gaussian process pseudo-point approximations using power expectation propagation},
+	title={A unifying framework for {Gaussian} process pseudo-point approximations using power expectation propagation},
 	author={Bui, Thang D and Yan, Josiah and Turner, Richard E},
 	journal={The Journal of Machine Learning Research},
 	volume={18},
@@ -796,7 +799,7 @@
 }
 
 @article{maddox2021conditioning,
-	title={Conditioning Sparse Variational Gaussian Processes for Online Decision-making},
+	title={Conditioning Sparse Variational {Gaussian} Processes for Online Decision-making},
 	author={Maddox, Wesley J and Stanton, Samuel and Wilson, Andrew G},
 	journal={Advances in Neural Information Processing Systems},
 	volume={34},
@@ -805,7 +808,7 @@
 }
 
 @article{bui2017streaming,
-	title={Streaming sparse Gaussian process approximations},
+	title={Streaming sparse {Gaussian} process approximations},
 	author={Bui, Thang D and Nguyen, Cuong and Turner, Richard E},
 	journal={Advances in Neural Information Processing Systems},
 	volume={30},
@@ -822,7 +825,7 @@
 }
 
 @article{ferrari1998finite,
-	title={Finite-dimensional approximation of Gaussian processes},
+	title={Finite-dimensional approximation of {Gaussian} processes},
 	author={Ferrari-Trecate, Giancarlo and Williams, Christopher and Opper, Manfred},
 	journal={Advances in neural information processing systems},
 	volume={11},
@@ -840,7 +843,7 @@
 }
 
 @inproceedings{hansen2005nonparametric,
-	title={Nonparametric Identification of linearizations and uncertainty using Gaussian process models-application to robust wheel slip control},
+	title={Nonparametric Identification of linearizations and uncertainty using {Gaussian} process models-application to robust wheel slip control},
 	author={Hansen, Jostein and Murray-Smith, Roderick and Johansen, Tor Arne},
 	booktitle={Proceedings of the 44th IEEE Conference on Decision and Control},
 	pages={5083--5088},
@@ -849,7 +852,7 @@
 }
 
 @inproceedings{kocijan2003predictive,
-	title={Predictive control with Gaussian process models},
+	title={Predictive control with {Gaussian} process models},
 	author={Kocijan, Ju{\v{s}} and Murray-Smith, Roderick and Rasmussen, Carl Edward and Likar, Bojan},
 	booktitle={The IEEE Region 8 EUROCON 2003. Computer as a Tool.},
 	volume={1},
@@ -913,7 +916,7 @@
 
 
 @inproceedings{diwale2014optimization,
-	title={Optimization of an airborne wind energy system using constrained gaussian processes},
+	title={Optimization of an airborne wind energy system using constrained {Gaussian} processes},
 	author={Diwale, Sanket Sanjay and Lymperopoulos, Ioannis and Jones, Colin N},
 	booktitle={2014 IEEE Conference on Control Applications (CCA)},
 	pages={1394--1399},
@@ -942,7 +945,7 @@
 }
 
 @article{hewing2019cautious,
-	title={Cautious model predictive control using gaussian process regression},
+	title={Cautious model predictive control using {Gaussian} process regression},
 	author={Hewing, Lukas and Kabzan, Juraj and Zeilinger, Melanie N},
 	journal={IEEE Transactions on Control Systems Technology},
 	volume={28},
@@ -953,7 +956,7 @@
 }
 
 @article{lederer2022cooperative,
-	title={Cooperative Control of Uncertain Multi-Agent Systems via Distributed Gaussian Processes},
+	title={Cooperative Control of Uncertain Multi-Agent Systems via Distributed {Gaussian} Processes},
 	author={Lederer, Armin and Yang, Zewen and Jiao, Junjie and Hirche, Sandra},
 	journal={IEEE Transactions on Automatic Control},
 	year={2022},
@@ -961,7 +964,7 @@
 }
 
 @article{goldberg1997regression,
-	title={Regression with input-dependent noise: A Gaussian process treatment},
+	title={Regression with input-dependent noise: A {Gaussian} process treatment},
 	author={Goldberg, Paul and Williams, Christopher and Bishop, Christopher},
 	journal={Advances in neural information processing systems},
 	volume={10},
@@ -969,7 +972,7 @@
 }
 
 @article{binois2018practical,
-	title={Practical heteroscedastic gaussian process modeling for large simulation experiments},
+	title={Practical heteroscedastic {Gaussian} process modeling for large simulation experiments},
 	author={Binois, Mickael and Gramacy, Robert B and Ludkovski, Mike},
 	journal={Journal of Computational and Graphical Statistics},
 	volume={27},
@@ -980,7 +983,7 @@
 }
 
 @inproceedings{turner2010state,
-	title={State-space inference and learning with Gaussian processes},
+	title={State-space inference and learning with {Gaussian} processes},
 	author={Turner, Ryan and Deisenroth, Marc and Rasmussen, Carl},
 	booktitle={Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
 	pages={868--875},
@@ -989,7 +992,7 @@
 }
 
 @article{eleftheriadis2017identification,
-	title={Identification of Gaussian process state space models},
+	title={Identification of {Gaussian} process state space models},
 	author={Eleftheriadis, Stefanos and Nicholson, Tom and Deisenroth, Marc and Hensman, James},
 	journal={Advances in neural information processing systems},
 	volume={30},
@@ -997,7 +1000,7 @@
 }
 
 @article{matthews2017gpflow,
-	title={GPflow: A Gaussian Process Library using TensorFlow.},
+	title={GPflow: A {Gaussian} Process Library using TensorFlow.},
 	author={Matthews, Alexander G de G and Van Der Wilk, Mark and Nickson, Tom and Fujii, Keisuke and Boukouvalas, Alexis and Le{\'o}n-Villagr{\'a}, Pablo and Ghahramani, Zoubin and Hensman, James},
 	journal={J. Mach. Learn. Res.},
 	volume={18},
@@ -1293,14 +1296,14 @@
 }
 
 @book{girard2004approximate,
-	title={Approximate methods for propagation of uncertainty with Gaussian process models},
+	title={Approximate methods for propagation of uncertainty with {Gaussian} process models},
 	author={Girard, Agathe},
 	year={2004},
 	publisher={University of Glasgow}
 }
 
 @article{berntorp2021online,
-	title={Online Bayesian inference and learning of Gaussian-process state--space models},
+	title={Online Bayesian inference and learning of {Gaussian}-process state--space models},
 	author={Berntorp, Karl},
 	journal={Automatica},
 	volume={129},
@@ -1311,7 +1314,7 @@
 
 
 @inproceedings{beckers2016stability,
-	title={Stability of Gaussian process state space models},
+	title={Stability of {Gaussian} process state space models},
 	author={Beckers, Thomas and Hirche, Sandra},
 	booktitle={2016 European Control Conference (ECC)},
 	pages={2275--2281},
